# PSE_2018

./: .clang-format  .gitignore  Doxyfile  README.md  diagramm_backup.xml  ea_zugang.txt  enterprise_architect_shortcuts.txt  format-code.sh
02_Präsentation_Git/Simon/: Praesentationsfolien (PowerPoint).ppt
Documentation/: Doc.chm
Generated Code/Classes/: AbstractModeController.cpp  AbstractModeController.h  AutoModeController.cpp  AutoModeController.h  BoundingBox.cpp  BoundingBox.h  Color.cpp  Color.h  DataProcessModule.cpp  DataProcessModule.h  DiagnosticLevel.h  Diagnostics.cpp  Diagnostics.h  DriveCommand.cpp  DriveCommand.h  DriveCommandHandler.cpp  DriveCommandHandler.h  DriveCommandPublisher.cpp  DriveCommandPublisher.h  DriveCommandPublisherType.h  DriveCommandSubscriber.cpp  DriveCommandSubscriber.h  DriveController.cpp  DriveController.h  FindMarkerModule.cpp  FindMarkerModule.h  FollowMarkerModule.cpp  FollowMarkerModule.h  ManualDriveCommandModule.cpp  ManualDriveCommandModule.h  ManualModeController.cpp  ManualModeController.h  MarkerInfo.cpp  MarkerInfo.h  ObstacleAvoidanceModule.cpp  ObstacleAvoidanceModule.h  PIDController.cpp  PIDController.h  SensorManager.cpp  SensorManager.h  (+2 more)
PSE_2018_Gruppe1/: .cproject  .gitignore  .project  CMakeLists.txt  readme.md  run_cmake.cmd  run_cmake_x86.cmd  setup.pse
PSE_2018_Gruppe1/cmake_modules/: linaro-arm.cmake
PSE_2018_Gruppe1/include/: Diagnostics.hpp  SensorManager.hpp
PSE_2018_Gruppe1/lib/: libFLAC.so.8  libasyncns.so.0  libfreenect.so.0.1  libjson.so.0  libogg.so.0  libsndfile.so.1  libvorbis.so.0  libvorbisenc.so.2
PSE_2018_Gruppe1/src/: AbstractModeController.cpp  AbstractModeController.hpp  AutoModeController.cpp  AutoModeController.hpp  CMakeLists.txt  DataProcessModule.hpp  DriveCommand.hpp  DriveCommandHandler.cpp  DriveCommandHandler.hpp  DriveCommandPublisher.cpp  DriveCommandPublisher.hpp  DriveCommandPublisherType.hpp  DriveCommandSubscriber.hpp  FileLogger.hpp  FindMarkerModule.cpp  FindMarkerModule.hpp  FollowMarkerModule.cpp  FollowMarkerModule.hpp  Logging.cpp  Logging.hpp  ManualDriveCommandModule.cpp  ManualDriveCommandModule.hpp  ManualModeController.cpp  ManualModeController.hpp  MathFunctions.hpp  ObstacleAvoidanceModule.cpp  ObstacleAvoidanceModule.hpp  PIDController.cpp  PIDController.hpp  TerminalHandler.cpp  TerminalHandler.hpp  main.cpp
PSE_2018_Gruppe1/src/test/: CMakeLists.txt  DriveCommandHandlerTest.cpp  FindMarkerModuleTest.cpp  FollowMarkerModuleTest.cpp  ManualDriveCommandModuleTest.cpp  MathFunctionsTest.cpp  ObstacleAvoidanceModuleTest.cpp  PIDControllerTest.cpp  TerminalHandlerTest.cpp  test.cpp
PSE_2018_Gruppe1/src/test/mocks/: BoundingBox.hpp  Diagnostics.cpp  DriveCommandSubscriberMock.hpp  DriveController.hpp  SensorManager.hpp  TerminalHandler.hpp
Präsentation/: 09_Versionsmanagement_Git.pptx
Präsentation/Denis/: Praesentationsfolien (PowerPoint).ppt  Praesentationsfolien_Denis.ppt
Präsentation/Simon/: Praesentationsfolien (PowerPoint).ppt  Praesentationsfolien_Simon.ppt
git_testfolder/: hello germany.txt  hello world.txt
src/itivLibrary/: BoundingBox.hpp  DriveController.hpp  MarkerInfo.hpp
